# first_repo

./: .dockerignore  .env  .gitignore  Dockerfile.api  Dockerfile.notifier  Dockerfile.worker_tg  Dockerfile.worker_web  README.md  docker-compose.yml  pyproject.toml  test_parse.py  test_parse2.py
.kiro/hooks/: update-steering-docs.kiro.hook
.kiro/steering/: build-test-run.md  coding-standards.md  project-overview.md
config/: channels.yaml  proxies.txt  squid.conf
migrations/: 001_init.sql  002_add_budget_max.sql
scripts/: setup_ru_proxy.sh  test_ru_access.py  tg_auth.py
src/: __init__.py
src/api/: __init__.py  app.py
src/api/routes/: ui.py  (+2 more)
src/common/: __init__.py  budget.py  config.py  constants.py  db.py  enums.py  logging.py  models.py  telegram.py
src/dedup/: __init__.py  service.py
src/glukhov_sales_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/notifier/: __main__.py  service.py
src/worker_tg/: __init__.py  __main__.py  config_loader.py  keyword_filter.py  worker.py
src/worker_web/: __init__.py  __main__.py  freshness.py  proxy_pool.py  worker.py
tests/integration/: conftest.py  test_api_integration.py  test_notifier_integration.py  test_worker_tg_pipeline.py  test_worker_web_pipeline.py
tests/unit/: test_api_crud.py  test_api_filter.py  test_backoff.py  test_category_filter.py  test_dedup_service.py  test_fuzzy_dedup.py  test_hashing.py  test_json_logging.py  test_keyword_filter.py  test_notifier.py  test_procurement_lead.py  test_proxy_pool.py  test_urgent_deadline.py  test_web_parsers.py  test_worker_web.py
(+8 files in other folders)
